更新各章节人物

--- a/chars_book/侦查系.html
+++ b/chars_book/侦查系.html
@@ -422,11 +422,11 @@
 <li>S3虽然热闹，连击数很好看，但是伤害很低，35%的概率晕也很难吸引人使用。</li>
 </ul>
 </div>
-<div id="招牌-23" class="section level4" number="6.1.1.2">
+<div id="招牌-22" class="section level4" number="6.1.1.2">
 <h4><span class="header-section-number">6.1.1.2</span> 招牌</h4>
 <p>根据对手的血量进一步提升自己的暴击率，血量越少暴击越高。这让风刃可以尽早结束战斗，弥补自己身板比较脆的不足。</p>
 </div>
-<div id="协同-23" class="section level4" number="6.1.1.3">
+<div id="协同-22" class="section level4" number="6.1.1.3">
 <h4><span class="header-section-number">6.1.1.3</span> 协同</h4>
 <ul>
 <li>剑圣：这时就幸亏风刃是侦查了，不然四个剑圣有三个战士，很难组队。</li>
@@ -474,11 +474,11 @@
 </ul>
 <p>可以说，对方的能量在路障眼里横竖都是“为我所用”：留着能量不放，路障提升暴击伤害，到了S2可以直接偷过来，放特殊的话，很可能吃逆火，也是伤害。</p>
 </div>
-<div id="招牌-24" class="section level4" number="6.2.1.2">
+<div id="招牌-23" class="section level4" number="6.2.1.2">
 <h4><span class="header-section-number">6.2.1.2</span> 招牌</h4>
 <p>没有觉醒前的路障可以最多叠加2层（一层小枪的，一层S1的），觉醒后小枪逆火可叠加，时间延长，保障一定的输出。</p>
 </div>
-<div id="协同-24" class="section level4" number="6.2.1.3">
+<div id="协同-23" class="section level4" number="6.2.1.3">
 <h4><span class="header-section-number">6.2.1.3</span> 协同</h4>
 <ul>
 <li>搭配碾碎器，每局头一次重击命中施加能量锁定，这可以配合他S2的偷气来使用，把对方差不多打红前一个重击锁住气，再用S2偷一大截能量回来。</li>
@@ -530,11 +530,11 @@
 <li>另外横炮的近战是7连击，一套拆光犀牛和科技鲨的盾没问题。</li>
 </ul>
 </div>
-<div id="招牌-25" class="section level4" number="6.3.1.2">
+<div id="招牌-24" class="section level4" number="6.3.1.2">
 <h4><span class="header-section-number">6.3.1.2</span> 招牌</h4>
 <p>开局12秒给自己加气。5级加41.2%，100级加<del>100%</del>（后调整为减半，100级加50%）。短战斗中，横炮可以先声夺人打出S1，一旦打晕，很快又能有S1，运气好的话连晕两次战斗就结束了。</p>
 </div>
-<div id="协同-25" class="section level4" number="6.3.1.3">
+<div id="协同-24" class="section level4" number="6.3.1.3">
 <h4><span class="header-section-number">6.3.1.3</span> 协同</h4>
 <ul>
 <li>搭配警车后横炮的重击可以堆积加攻buff。</li>
@@ -549,7 +549,7 @@
 <h4><span class="header-section-number">6.3.1.5</span> 8.0调整</h4>
 <p>基础暴击率+3.6%，基础暴击伤害+10%，S2的导弹100%施加燃烧。</p>
 </div>
-<div id="年8月调整" class="section level4" number="6.3.1.6">
+<div id="年8月调整-1" class="section level4" number="6.3.1.6">
 <h4><span class="header-section-number">6.3.1.6</span> 2019年8月调整</h4>
 <p>在游戏进入通用人物币阶段后，老牌的角色一个个被卡邦拿来当月度人物卖，然而不但战擎、铁皮已经上架，连野牛、天火等都闪亮登场时，横炮作为第一批人物还没有出现。在2019年8月1日正式上架前，官方再次对横炮作出平衡性调整：</p>
 <ul>
@@ -596,11 +596,11 @@
 <li>S3：跟优秀的S1/S2比，这个能量锁定虽然有16秒，但在动画中就消耗了不少时间。在某些绝望的时候还是可以用的。</li>
 </ul>
 </div>
-<div id="招牌-26" class="section level4" number="6.4.1.2">
+<div id="招牌-25" class="section level4" number="6.4.1.2">
 <h4><span class="header-section-number">6.4.1.2</span> 招牌</h4>
 <p>充能完毕给自己加气。这是游戏中公认数一数二的招牌，它让警车在不需要碰到对方的前提下给自己加气，再配合S1的减气，可以让警车始终牢牢将对方的特殊扼杀在萌芽状态，再难的敌人也如同拔了牙的老虎。很多人认为警车招牌越高越好，实则未必，后面打法中会提到原因。</p>
 </div>
-<div id="协同-26" class="section level4" number="6.4.1.3">
+<div id="协同-25" class="section level4" number="6.4.1.3">
 <h4><span class="header-section-number">6.4.1.3</span> 协同</h4>
 <ul>
 <li>与通天晓一同出战，让汽车人队友们获得护甲，单人任务中加攻。</li>
@@ -641,23 +641,23 @@
 <!--Note-->
 <div id="特点分析-27" class="section level3" number="6.5.1">
 <h3><span class="header-section-number">6.5.1</span> 特点分析</h3>
-<p>为了与战术大黄蜂区分，玩家干脆把侦查大黄蜂唤为小黄蜂，这也与他G1的可爱侦察兵形象吻合。小黄蜂被Kabam做为独家人物在2017年圣诞节发布，独特的获取方式让很多玩家至今也没能拿到。</p>
+<p>为了与战术大黄蜂区分，玩家干脆把侦查大黄蜂唤为小黄蜂，这也与他G1的可爱侦察兵形象吻合。小黄蜂被Kabam做为独家人物在2017年圣诞节发布，<del>独特的获取方式让很多玩家至今也没能拿到。</del>使用乖巧与金轮水晶搏概率的方式让玩家趋之若鹜。后来在“世代任务”中作为完成全任务的奖励得到了普及。依然错过的玩家，能在泰坦货币商店以17万的价格购得。</p>
 <div id="能力-27" class="section level4" number="6.5.1.1">
 <h4><span class="header-section-number">6.5.1.1</span> 能力</h4>
 <ul>
-<li>后闪获得近战规避加成，触发规避后消失，也会规避警车的S2。</li>
+<li>后闪获得近战规避加成，触发规避后消失。注意：会规避警车的S2。这让小黄蜂作为敌人的时候特别难缠。</li>
 <li>侧闪获得暴击率加成（+20~28%），最多攒三个，打中对方时（无论近战/远程，无论是否暴击）每次消耗一个。</li>
 <li>暴击会瓦解任何护盾并施加5秒震击。这让小黄蜂对付多个科技系角色游刃有余，并且他还能打破能量晶体护盾这种变态模块，把本来烦死人的拉锯战变回到竞技场难度。</li>
-<li>S1提升60%的暴击伤害，配合小黄蜂可以攒到的三个暴击率加成，一般在近战打中时要只打两下马上跟S1，否则S1打不出暴击就亏了。</li>
-<li>S2锁气10秒，配合招牌，可以连续对敌人形成不错的控制。</li>
+<li>S1提升60%的暴击伤害，配合小黄蜂可以攒到的三个暴击率加成，在连S技时的技巧是打一到两拳马上跟S1，否则S1打不出暴击就亏了。</li>
+<li>S2伤害不俗并锁气10秒，配合招牌，可以连续对敌人形成不错的控制。</li>
 <li>S3得到20个暴击率加成，打中对方时每次消耗一个，这也弥补了S3伤害很低的问题。并且因为S3全程算近战，觉醒后整个过程还是加气的。</li>
 </ul>
 </div>
-<div id="招牌-27" class="section level4" number="6.5.1.2">
+<div id="招牌-26" class="section level4" number="6.5.1.2">
 <h4><span class="header-section-number">6.5.1.2</span> 招牌</h4>
-<p>进入对手近战距离时自动加气（越接近气满时加得越慢），并获得10%的加攻。高觉醒后效果很好，高觉醒的小黄蜂敌人也很难用近战选手去打，因为打着打着他就气满了，等他放你一个S3，动画结束时又快一格气了。</p>
+<p>进入对手近战距离时自动加气（不影响标准的打人和挨打时的加气，但越接近气满时加得越慢，不会自动加到红），并获得10%的加攻。高觉醒后效果很好，高觉醒的小黄蜂敌人也很难用近战选手去打，因为打着打着他就气满了，等他放你一个S3，动画结束时又快一格气了。</p>
 </div>
-<div id="协同-27" class="section level4" number="6.5.1.3">
+<div id="协同-26" class="section level4" number="6.5.1.3">
 <h4><span class="header-section-number">6.5.1.3</span> 协同</h4>
 <ul>
 <li>搭配警车或者擎天柱，小黄蜂的重击根据队中存活的队员数提升攻击力。</li>
@@ -706,11 +706,11 @@
 <li>前冲时被对方闪避会获得规避，这样反冲扑空的时候安全系数大大提高。而面对反冲对手的时候，侧闪反击就不灵了。</li>
 </ul>
 </div>
-<div id="招牌-28" class="section level4" number="6.6.1.2">
+<div id="招牌-27" class="section level4" number="6.6.1.2">
 <h4><span class="header-section-number">6.6.1.2</span> 招牌</h4>
 <p>概率触发变形齿轮破坏，此时对方的能量功率降低30%，持续10秒，并且在这个过程中如果变形的话会直接晕掉（与其说是变形还不如说就是重击，因为声波重击过程中不变形也会晕，录音机S1变形也不会晕）。初始概率1/3左右。由于反冲的重击回弹破绽大，所以不宜滥用，适合对付一些重击非常容易预测的对手，比方说声波或者出霸体的爆威。</p>
 </div>
-<div id="协同-28" class="section level4" number="6.6.1.3">
+<div id="协同-27" class="section level4" number="6.6.1.3">
 <h4><span class="header-section-number">6.6.1.3</span> 协同</h4>
 <p>反冲与汽车大师和喷气机在一起可以让减益时间延长且不能净化。这种两两隔开一个类别三角阵型，如果不是反冲和喷气机的平庸，本来应该是很好的搭配。</p>
 </div>
@@ -764,11 +764,11 @@
 <li>S2和S3发动时，对方的气越少杀伤力越大，如有机会最好在骗招之后使用。但是不建议为了骗招错过招牌的有效时间。</li>
 </ul>
 </div>
-<div id="招牌-29" class="section level4" number="6.7.1.2">
+<div id="招牌-28" class="section level4" number="6.7.1.2">
 <h4><span class="header-section-number">6.7.1.2</span> 招牌</h4>
 <p>这是一个面面俱到的神奇招牌：首先是阻止对方触发能力，虽然并不能阻止黄蜂的复活和震天尊的白球，但是游戏中大部分能力都是可以阻止的，所以黄豹抢在声波之前满一格气，声波连护盾都出不来。其次是招牌过程中打穿对手所有减伤，让犀牛和幻影面对黄豹的S技毫无办法，猩猩引以为傲的抗暴护甲也无能为力。然后是概率规避，让黄豹有招牌的时候可以更加莽撞。而且前面三个特性是与觉醒等级无关，觉醒高只是增加一些暴击率。所以几乎只要觉醒一次，就把黄豹隐藏的能力彻底解锁。对于黄豹来说，出招牌意味着S技也到了，由于招牌打穿对方一切减伤手段并封锁一切技能，这时的S技打在对方身上是相当的疼，并且对方不可能规避掉。</p>
 </div>
-<div id="协同-29" class="section level4" number="6.7.1.3">
+<div id="协同-28" class="section level4" number="6.7.1.3">
 <h4><span class="header-section-number">6.7.1.3</span> 协同</h4>
 <p>黄豹单兵能力已经超强，再加上野兽净化的能力，连碎骨魔也照样敢打。</p>
 </div>
@@ -815,12 +815,12 @@
 <li>S3：爵士出来之后有人笑谈说逆火的祖宗来了——此招施加一个永久逆火，并且对方无法移除。此后再配合骗招能给爵士持续的被动输出。</li>
 </ul>
 </div>
-<div id="招牌-30" class="section level4" number="6.8.1.2">
+<div id="招牌-29" class="section level4" number="6.8.1.2">
 <h4><span class="header-section-number">6.8.1.2</span> 招牌</h4>
 <p>耗竭：处于混乱的对手，招式每打空一下就会被扣气一定的百分比。5级扣1.5%，100级扣6%。换句话说爵士只要混乱打中对手，然后和对方展开灵巧的闪躲，就能把对方的气给扣下来。不仅如此，对方因为扣气而失去一招必杀时（从红变黄，从黄变绿，从绿变灰）还会晕一秒。例如爵士在打红对手然后用s2锁定对方第3招的时候，对方就算不放大招，只要一招被闪过，就可以把3格气减到不足3格，从而晕掉。</p>
 <p>然而这个招牌，更多的时候是在帮倒忙——因为在混乱状态中，对方最好是能够正常行动放出大招，而不是晕掉。看见对方晕掉你上去打，实际上又把气给打满了。而且这晕的时间是个恒定值，不管怎么觉醒都只有一秒，实在是太短反应不过来。</p>
 </div>
-<div id="协同-30" class="section level4" number="6.8.1.3">
+<div id="协同-29" class="section level4" number="6.8.1.3">
 <h4><span class="header-section-number">6.8.1.3</span> 协同</h4>
 <p>爵士最佳的协同是搭配战擎。此时他只要闪掉一个特殊技的所有攻击，就能获得8%的加攻一层，并且可以一直堆到30层。爵士刚刚发布的时候加攻没有上限，就有人用这个特性去打传奇，效果特别好，后来官方改成了30层。不过，实战中一场战斗骗30大招的场合也的确是太少。</p>
 </div>
