--- a/chars_book/战士系.html
+++ b/chars_book/战士系.html
@@ -414,11 +414,11 @@
 <h4><span class="header-section-number">5.1.1.1</span> 能力</h4>
 <p>像一只刺猬一样，挨暴击时高概率施加流血反伤对方。重击造流血，流血可堆积。对方只要用S技，无论命中与否碎骨魔都提升暴击率。三个S技全是各种流血，S2性能最佳。施加流血越多，对方规避能力越差。</p>
 </div>
-<div id="招牌-15" class="section level4" number="5.1.1.2">
+<div id="招牌-14" class="section level4" number="5.1.1.2">
 <h4><span class="header-section-number">5.1.1.2</span> 招牌</h4>
 <p>高价值招牌，与流血能力相得益彰，降低对方攻击和能量同时提升自己的。你会发现面对高觉醒碎骨，越打他越打不下血光给他加气，自己不加气还受到流血伤害越高。</p>
 </div>
-<div id="协同-15" class="section level4" number="5.1.1.3">
+<div id="协同-14" class="section level4" number="5.1.1.3">
 <h4><span class="header-section-number">5.1.1.3</span> 协同</h4>
 <p>碎骨魔受益的协同都是基础类的，乏善可陈。</p>
 </div>
@@ -462,11 +462,11 @@
 <li>由于暴击率不高，实战中雷震用晕点打出的额外输出往往比他的流血能力更来得更多。</li>
 </ul>
 </div>
-<div id="招牌-16" class="section level4" number="5.2.1.2">
+<div id="招牌-15" class="section level4" number="5.2.1.2">
 <h4><span class="header-section-number">5.2.1.2</span> 招牌</h4>
 <p>雷震暴击率不高的设计也许是为了配合他的招牌：近战打空后为下一次暴击增加暴击伤害。这个招牌再配合剑圣协同，让平时暴击不高的雷震经常冷不丁打出恐怖的暴击伤害秒杀对手（最高见过的截图是2万多伤害），真是“不是不报，时候未到”。但是近战打空也是有一定风险的。</p>
 </div>
-<div id="协同-16" class="section level4" number="5.2.1.3">
+<div id="协同-15" class="section level4" number="5.2.1.3">
 <h4><span class="header-section-number">5.2.1.3</span> 协同</h4>
 <p>剑圣：不赘述。</p>
 </div>
@@ -511,11 +511,11 @@
 <li>由于S1优秀S2鸡肋，S3反倒成为了“一不小心涨到两格气又舍不得用S2”的较好补充。曾经S3的狙击在猩猩黄甲上打不出流血，后来好像修正正常了。</li>
 </ul>
 </div>
-<div id="招牌-17" class="section level4" number="5.3.1.2">
+<div id="招牌-16" class="section level4" number="5.3.1.2">
 <h4><span class="header-section-number">5.3.1.2</span> 招牌</h4>
 <p>概率获得精准增益，加暴击率，阻止规避10秒。虽然是个看脸的招牌，但由于是100%治疗规避，所以阿尔茜在一个S1击倒路障后如果出了招牌，对方是无能为力的。而且初始概率就有45%左右，还是很有效的。</p>
 </div>
-<div id="协同-17" class="section level4" number="5.3.1.3">
+<div id="协同-16" class="section level4" number="5.3.1.3">
 <h4><span class="header-section-number">5.3.1.3</span> 协同</h4>
 <ul>
 <li>搭配幻影和探长后进一步加强远程小枪的暴击。</li>
@@ -563,11 +563,11 @@
 <li>面对流血对手，漂移自带20%的规避，这让漂移在施加S2和S3之后的安全性也略有提升。在面对配伤害加速器的漂移时，如果没有净化流血的方法，那对面等于额外多了个夜莺。</li>
 </ul>
 </div>
-<div id="招牌-18" class="section level4" number="5.4.1.2">
+<div id="招牌-17" class="section level4" number="5.4.1.2">
 <h4><span class="header-section-number">5.4.1.2</span> 招牌</h4>
 <p>如果说漂移平时在流血时间上不如风刃和雷震，觉醒后则补上了这个短板：连击数上了15会提升50~150%的流血时间。</p>
 </div>
-<div id="协同-18" class="section level4" number="5.4.1.3">
+<div id="协同-17" class="section level4" number="5.4.1.3">
 <h4><span class="header-section-number">5.4.1.3</span> 协同</h4>
 <ul>
 <li>剑圣：不赘述。</li>
@@ -614,11 +614,11 @@
 </ul>
 <p>热破的三个S技中，S1没有任何额外效果，S2和S3都是施加减速。在没有觉醒前，S2和S3主要用来控制规避和对方的能量功率。S2是在输出与控制间最划算的特殊技</p>
 </div>
-<div id="招牌-19" class="section level4" number="5.5.1.2">
+<div id="招牌-18" class="section level4" number="5.5.1.2">
 <h4><span class="header-section-number">5.5.1.2</span> 招牌</h4>
 <p>加速：觉醒后热破发动S技会提高自身的能量功率（5级67.4，100级120%），觉醒够高的时候，热破在7秒内很可能再次攒出S技，反复循环。而且触发加速还获得30%的远程规避，让热破可以放肆一点冲入近战。盟战中2厅2线配了能量功率模块的高觉醒热破非常难打，就是因为骗完一招又来一招……</p>
 </div>
-<div id="协同-19" class="section level4" number="5.5.1.3">
+<div id="协同-18" class="section level4" number="5.5.1.3">
 <h4><span class="header-section-number">5.5.1.3</span> 协同</h4>
 <p>搭配警车后热破的重击可以堆积加攻buff，搭配幻影后暴击伤害提升。</p>
 </div>
@@ -667,11 +667,11 @@
 <p>可惜探长三个特殊技中，S2和S3的伤害都比较抱歉。</p>
 <p>探长独特的地方在于他远程小枪的输出甚至超过了拳头，这也让他的打法套路异于常人，操作学习难度高。小枪的低命中也让他很难快速结束战斗。自身的血量在战士中排名仅次于蝎子，配合护甲buff，有一定的持久性。</p>
 </div>
-<div id="招牌-20" class="section level4" number="5.6.1.2">
+<div id="招牌-19" class="section level4" number="5.6.1.2">
 <h4><span class="header-section-number">5.6.1.2</span> 招牌</h4>
 <p>在远程攻击即将击中时侧闪将触发滚动，并提升远程射速与伤害。要注意的是太早侧闪不会触发。高觉醒探长出招牌后三发小枪的伤害甚至能比肩S3。</p>
 </div>
-<div id="协同-20" class="section level4" number="5.6.1.3">
+<div id="协同-19" class="section level4" number="5.6.1.3">
 <h4><span class="header-section-number">5.6.1.3</span> 协同</h4>
 <p>探长收到的协同中，配幻影和阿尔茜能提升远程暴击率，配铁皮/犀牛/搅拌者能延长减益时间并在盟战中加攻。配蝎子可以让重击有概率变成暴击。</p>
 </div>
@@ -728,12 +728,12 @@
 <li>作为战士，近战暴击30~40%的概率流血，强度40到60%，时间4秒。可谓中规中矩。</li>
 </ul>
 </div>
-<div id="招牌-21" class="section level4" number="5.7.1.2">
+<div id="招牌-20" class="section level4" number="5.7.1.2">
 <h4><span class="header-section-number">5.7.1.2</span> 招牌</h4>
 <p>身上有毒液充能时，受到普通攻击会回血一定比例，受到的伤害（5级34.6%，满觉醒86%），这可以理解为提升了续航，也可以理解为减少了对方的攻击力。在面对巨蝎对手的时候，要注意使用特殊技杀伤大、有DOT的角色。另外因为防御伤害不回血，所以普攻打在防御的蝎子身上最好打满4下。</p>
 <p>觉醒的巨蝎配备科技控制台的时候，由于模块的加持会让巨蝎的回血进一步提升甚至抵消了伤害，这时建议使用黄豹、震荡波这种又可以阻止修复又有DOT的角色，否则真的是几分钟都打不完一局突袭。</p>
 </div>
-<div id="协同-21" class="section level4" number="5.7.1.3">
+<div id="协同-20" class="section level4" number="5.7.1.3">
 <h4><span class="header-section-number">5.7.1.3</span> 协同</h4>
 <p>蝎子收到的协同主要也只是野兽净化和野牛提供的野兽祖先破防，但这两个协同都必须重击，后面会提到蝎子的打法要减少重击的使用。</p>
 </div>
@@ -767,7 +767,7 @@
 <!--Note-->
 <div id="特点分析-22" class="section level3" number="5.8.1">
 <h3><span class="header-section-number">5.8.1</span> 特点分析</h3>
-<p>在言之凿凿表示“不会再有新机器人”之后，坊间盛传Kabam失去了孩之宝的变形金刚人物授权。然而游戏接近3周年庆之前发布了塞伯坦传奇3，奖励中出现“泰坦货币”，它的作用在8.4版更新后揭示出来——与千呼万唤始上架的五星震天尊一同上架的还有百炼为战游戏原创人物——亡灵天尊！</p>
+<p>在言之凿凿表示“不会再有新机器人”之后，坊间盛传Kabam失去了孩之宝的变形金刚人物授权。然而游戏接近3周年庆之前Kabam发布了塞伯坦传奇3，奖励中出现“泰坦货币”（好吧，官方翻译是巨人货币），它的作用在8.4版更新后揭示出来——与千呼万唤始上架的五星震天尊一同上架到泰坦货币商店（标价24万）的还有百炼为战游戏原创人物——亡灵天尊！</p>
 <p>最初普通认为他和惊天雷、暗黑擎天柱一样是标准震天尊重涂，事实上两者除了S3相同外，差距非常大。亡灵天尊的重击是狂飙的近战重击，5连的动作仅部分与震天尊相似，S1与其说有震天尊S1的样子，不如说是野牛S1的飞全屏版（并且S1很难完美闪掉），S2是犀牛的动作。</p>
 <div id="能力-22" class="section level4" number="5.8.1.1">
 <h4><span class="header-section-number">5.8.1.1</span> 能力</h4>
@@ -786,12 +786,12 @@
 <li>S3：85%的概率施加流血7秒，消耗20个充能</li>
 </ul>
 </div>
-<div id="招牌-22" class="section level4" number="5.8.1.2">
+<div id="招牌-21" class="section level4" number="5.8.1.2">
 <h4><span class="header-section-number">5.8.1.2</span> 招牌</h4>
 <p>最大充能提升到40层。颠覆力量激活时，加1.9 ~ 80.3%的暴击伤害。
 没有太大必要讨论是否要觉醒，因为能拿到亡灵天尊的人绝对不会犹豫使用觉醒程序。但觉醒只是对他的攻击数值做了提升，有点像漂移的觉醒。</p>
 </div>
-<div id="协同-22" class="section level4" number="5.8.1.3">
+<div id="协同-21" class="section level4" number="5.8.1.3">
 <h4><span class="header-section-number">5.8.1.3</span> 协同</h4>
 <ul>
 <li>受益：震天尊。开局拥有4~10个充能。经实测，这可以让亡灵天尊最多能攒到50个充能，但是放S技时，震天尊给的10个充能会一次性消耗掉，此后依然是40充能封顶。</li>
