--- a/chars_book/战术系.html
+++ b/chars_book/战术系.html
@@ -409,18 +409,18 @@
 <!--Note-->
 <div id="特点分析" class="section level3" number="3.1.1">
 <h3><span class="header-section-number">3.1.1</span> 特点分析</h3>
-<p>战擎是所有人第一个拿到的机器人，上手容易，操作顺畅，标准的速攻高输出选手。协同方面，由于有救护车的回血，这个“小强组合”在盟战中是玩家长期追捧的对象。官方也因此有底气采用水晶开启事件的方式发布他的5星版本大肆敛财。</p>
+<p>战擎是所有人第一个拿到的机器人，上手容易，操作顺畅，标准的速攻高输出选手。协同方面，由于有救护车的回血，这个“小强组合”在盟战中是玩家长期追捧的对象。官方也因此有底气采用“水晶开启事件”的方式发布他的5星版本并大肆敛财。</p>
 <div id="能力" class="section level4" number="3.1.1.1">
 <h4><span class="header-section-number">3.1.1.1</span> 能力</h4>
 <ul>
 <li>重击按队友数量获得攻击加成。</li>
-<li>S1,S2,S3都有不同程度的破甲，S2的输出巨大，S3能永久破甲。</li>
-<li>主动站防时，按队友数提升近战护甲。</li>
+<li>主动防御时，按队友数提升近战护甲。（这一条和上一条在游戏中的翻译都是错的）</li>
+<li>3个特殊技都有不同程度的破甲，S2的输出巨大，短战斗一招制敌，S3能永久破甲配合招牌能力大幅度提高输出。</li>
 </ul>
 </div>
 <div id="招牌" class="section level4" number="3.1.1.2">
 <h4><span class="header-section-number">3.1.1.2</span> 招牌</h4>
-<p>暴击破甲中的对手会造成流血，配合S3的永久破甲，对付各种对手都有相当稳定的输出保障（除了高觉醒的猩猩），事实上战擎的流血无论在时间上和强度上都不输那些靠流血吃饭的侦查和战士，所以“深度创伤”精通也对他有相当的提升。</p>
+<p>暴击破甲中的对手会造成流血，配合S3的永久破甲（俗称脱衣打法），对付各种对手都有相当稳定的输出保障（除了高觉醒的猩猩），事实上战擎的流血无论在时间上和强度上都不输那些靠流血吃饭的侦查和战士，所以“深度创伤”精通也对他有相当的提升。</p>
 </div>
 <div id="协同" class="section level4" number="3.1.1.3">
 <h4><span class="header-section-number">3.1.1.3</span> 协同</h4>
@@ -446,7 +446,7 @@
 </div>
 <div id="基地防守" class="section level3" number="3.1.3">
 <h3><span class="header-section-number">3.1.3</span> 基地防守</h3>
-<p>战擎的AI很弱，基地防守效果一般，加上五星战擎一直没出（出了也是宝），四星的黄金产量不够，不推荐放基地。</p>
+<p>战擎的AI很弱，基地防守效果一般，<del>加上五星战擎一直没出（出了也是宝），四星的黄金产量不够，</del>不推荐放基地。</p>
 <!--/Note-->
 </div>
 </div>
@@ -457,7 +457,7 @@
 <!--Note-->
 <div id="特点分析-1" class="section level3" number="3.2.1">
 <h3><span class="header-section-number">3.2.1</span> 特点分析</h3>
-<p>战术黄的速度快，规避能力强，根据击倒次数逐渐加攻的能力让他在长战斗中越来越强。但由于官方从游戏一开始就雪藏他的四星版本，直到很晚才真正被大家所了解。</p>
+<p>战术黄的速度快，规避能力强，根据击倒次数逐渐加攻的能力让他在长战斗中越来越强。但由于官方从游戏一开始就雪藏他的四星版本，直到很晚才真正被大家所了解。他的五星版本依然采用了较困难的方式（金轮水晶搏概率）来获取，直到泰坦货币的发布，才以13万的价格逐渐走向平民玩家。</p>
 <div id="能力-1" class="section level4" number="3.2.1.1">
 <h4><span class="header-section-number">3.2.1.1</span> 能力</h4>
 <ul>
@@ -500,7 +500,7 @@
 </div>
 <div id="基地防守-1" class="section level3" number="3.2.3">
 <h3><span class="header-section-number">3.2.3</span> 基地防守</h3>
-<p>战术黄的规避能力不俗，战斗时间会更长，配流血模块面对不带净化的对手可以白送不少输出。另外他的S2很难躲（后闪-侧闪-后闪-侧闪），配超导2000也是不错的选择。</p>
+<p>战术黄的规避能力不俗，战斗时间会更长，配流血模块面对不带净化的对手可以白送不少输出。另外他的S2很难躲（后闪-侧闪-后闪-侧闪），配超导2000也是不错的选择。配EMI模块可以让对方很难有效地切换他的规避类型。</p>
 <!--/Note-->
 </div>
 </div>
@@ -516,9 +516,9 @@
 <h4><span class="header-section-number">3.3.1.1</span> 能力</h4>
 <ul>
 <li>自适应的抗性切换，在受到不同攻击时能逐渐降低伤害。换句话说，对付AI通天晓时，需要交替使用物理和能量攻击才能保证输出，例如警车可以先揍出10层物理抗性，再用S2两发打出高伤害。但像漂移，雷震和反冲这几位遇到他就实在苦手了，因为他们的普通远程攻击算物理攻击，无法使通天晓的抗性切换。</li>
-<li>特殊技的破甲条件是对方也有护甲，并且几层护甲就转化成几层破甲，虽然对猩猩队长有很好的克制，却也大大降低了面对非斗士的输出。</li>
-<li>另外小枪有驱散加攻buff的能力，但不像红蜘蛛和犀牛有附加伤害。</li>
+<li><del>特殊技的破甲条件是对方也有护甲，</del>S1在对方没有护甲的情况下强制破甲，如果有护甲，则几层护甲就转化成几层破甲。猩猩队长这种让很多角色很头疼的护甲能力，在通天晓面前是不堪一击的。</li>
 <li>S2在两种抗性累计到10层的时候能获得较大的提升。</li>
+<li>另外小枪有驱散加攻类buff的能力，但不像红蜘蛛和犀牛有附加伤害。</li>
 </ul>
 </div>
 <div id="招牌-2" class="section level4" number="3.3.1.2">
@@ -584,7 +584,7 @@
 <li>S3能驱散5个对方任意增益（只要增益图标不是白色）</li>
 </ul>
 </div>
-<div id="招牌-3" class="section level4" number="3.4.1.2">
+<div id="nullify" class="section level4" number="3.4.1.2">
 <h4><span class="header-section-number">3.4.1.2</span> 招牌</h4>
 <p>红蜘蛛的招牌可以驱散多种buff：</p>
 <ul>
@@ -638,25 +638,40 @@
 <!--Note-->
 <div id="特点分析-4" class="section level3" number="3.5.1">
 <h3><span class="header-section-number">3.5.1</span> 特点分析</h3>
-<p>战术系的代表人物，战威凭借各种不同手段限制对手，并根据战况提高自身。</p>
+<p>战术系的代表人物，战威凭借各种不同手段限制对手，并根据战况提高自身。经过各种特殊任务和模块的检验，战威证明了自己是适应性极强的顶级角色。</p>
 <div id="能力-4" class="section level4" number="3.5.1.1">
 <h4><span class="header-section-number">3.5.1.1</span> 能力</h4>
 <ul>
-<li>减益融合：战威的主要能力是特殊技之后充能重击（6秒充好给三发，用完再充）命中的减益融合（三个特殊技分别对应融合破甲/减攻/震击），面对斗士系尤其是猩猩队长时有极大的优势，同时要比战擎能更快地完成永久破甲，且不会触发猩猩的回血。</li>
-<li>如果充能炮打完也没融合成功，可以在近战用中等攻击结束一套连击（右滑输入），把刷新未融合的减益过期时间，以便等待充能炮充满。</li>
-<li>血越少，被击倒后起身越有概率变得不可阻挡，一定程度上保证了残血时的健壮。</li>
-<li>S1施加10秒破甲，S2施加10秒减攻，S3施加20秒震击，这三个减益中融合到任何一个，都能让战斗的天平迅速倒向威震天一边。尤其是S3，不但融合的时间足够长，而且S3之后充能炮无限使用，让战威像黄蜂半血以下一样多一个龟派放风筝的打法。</li>
+<li>S1施加10秒破甲，S2施加10秒减攻，S3施加20秒震击</li>
+<li>充能炮（紫炮）：开局后6秒充好给三发紫炮，用完再充。紫炮的飞行速度和伤害提升，但更重要的是下面的技能。</li>
+<li>减益融合：对方身上有减益时（三个特殊技分别对应融合破甲/减攻/震击）如果能用充能炮命中，会让减益变成永不过期，再配合招牌，让战局的天平迅速倒向我方。注意震击还是会被<a href="斗士系.html#beast-purification">动物园</a>、钢锁这些角色净化掉，另两个减益也会被外部过滤器净化掉。</li>
+<li>如果充能炮打完也没融合成功，可以在近战用中等攻击结束一套连击（右滑输入），把刷新未融合的减益过期时间，以便等待充能炮充满。如果眼看就要过期了，可以不打满5连，早点右滑打出中攻击来刷新。</li>
+<li>血越少，被击倒后起身越有概率变得不可阻挡，一定程度上保证了残血时的健壮。在打电脑战威时则要小心压起身可能会被霸体坑到。</li>
 </ul>
 </div>
-<div id="招牌-4" class="section level4" number="3.5.1.2">
+<div id="招牌-3" class="section level4" number="3.5.1.2">
 <h4><span class="header-section-number">3.5.1.2</span> 招牌</h4>
-<p>觉醒后的战威在近战中有概率能偷走对方身上的buff，对敌人的多种能力和模块加持均有良好的控制。战威的这个招牌可谓是“战术”二字的最佳写照。但是初始概率不高，要达到稳定触发的话比较吃招牌程序。</p>
+<p>觉醒后的战威在近战中（打中或者屈防均可）有概率（招牌5级时20%，满招牌时60%）能偷走对方身上的buff，对敌人的多种能力和模块加持均有良好的控制。目前已知能偷到的buff有：</p>
+<ul>
+<li>橙色图标的攻击类buff（远程/近战射速或伤害，反射远程）：要偷到反射远程需要花一点心思（紫炮打前冲或S技空档完成融合），但这个buff被偷掉就不会再回来了，可以把难打的战斗变成竞技场难度</li>
+<li>紫色图标的能量增加类buff</li>
+<li>黄色图标的暴击率/暴击伤害buff</li>
+<li>蓝色图标的防御类buff（护甲，抗性，循环抵抗）：其中抗性偷过来会变成护甲，循环抵抗偷过来没有无敌的效果</li>
+<li>特定的绿色修复buff：修复模块、最后防线修复都可以让战威把难缠的敌人变成回血宝物。虽然战威能偷救护车招牌的紧急修复，却无法偷到蝎子招牌的修复。</li>
+</ul>
+<p>战威的这个招牌可谓是“战术”二字的最佳写照。可以对比一下三个战术系角色在控制对方buff时的能力：</p>
+<ul>
+<li>红蜘蛛：你有buff？现在你没有了</li>
+<li>黑擎：你有？我也有</li>
+<li>战威：你有？现在你没有了，到我这来了</li>
+</ul>
+<p>看起来初始20%的概率是不高，但是一套近战连击有5次，再接一下S1，共7连击，按概率计算，7次都偷不到的概率是20.9%，所以7连击能偷到的概率已经有将近80%了。不过能喂招牌还是多喂一些，因为有些敌人的buff真的是很多。</p>
 </div>
 <div id="协同-4" class="section level4" number="3.5.1.3">
 <h4><span class="header-section-number">3.5.1.3</span> 协同</h4>
 <ul>
 <li>红蜘蛛能概率性地帮助战威的特殊技击晕对手一次，令减益融合变得简单。但两人均是战术系也使这个协同的价值有所降低。</li>
-<li>震荡波可以概率性使威震天的近战中攻击降低对手能量功率，该减益可融合。两人同时出战，适合对付能量功率提升的模块。</li>
+<li>震荡波可以使威震天的第二下M攻击有概率（最大40%）降低对手30%的能量功率，该减益可融合。全场减能量30%的对手已经如被阉割的种马，而这个协同的意义还不止于此：一般情况下战威要靠攒出一格气放S1来完成减益融合，这个协同则可以让他一充满紫炮就迅速完成融合开始偷Buff。</li>
 </ul>
 </div>
 <div id="短板-4" class="section level4" number="3.5.1.4">
@@ -675,7 +690,7 @@
 </div>
 <div id="长战斗-4" class="section level4" number="3.5.2.2">
 <h4><span class="header-section-number">3.5.2.2</span> 长战斗</h4>
-<p>先上S3，保证充能炮无限使用，融合震击保证一定的输出后再融合破甲，最后围绕S2打输出。融合不到不要着急，在近战中尽早右滑打出中攻击来刷新。有无限充能炮的时候也可以像黄蜂一样放风筝。</p>
+<p>先上S3，保证充能炮无限使用，融合震击保证一定的输出后再融合破甲，最后围绕S2打输出。有无限充能炮的时候也可以像黄蜂一样放风筝。</p>
 </div>
 </div>
 <div id="基地防守-4" class="section level3" number="3.5.3">
@@ -699,7 +714,7 @@
 <li>重击暴击时施加流血，在面对纳米千时有一定的破盾能力。</li>
 </ul>
 </div>
-<div id="招牌-5" class="section level4" number="3.6.1.2">
+<div id="招牌-4" class="section level4" number="3.6.1.2">
 <h4><span class="header-section-number">3.6.1.2</span> 招牌</h4>
 <p>破甲后加大对方的防御伤害，并有概率破防，适合压迫式的猛攻。但是貌似有个严重的bug：近战连击破防后连大招很可能被电脑防住。</p>
 </div>
@@ -763,7 +778,7 @@
 <li>S1的护甲穿透输出稳定，S2除了输出高并无甚亮点（毕竟在玩家使用的时候，特殊技都是在连招中触发的，不用在意最后一击的破防），S3后在10秒之内连续发黑暗场，十分霸气。</li>
 </ul>
 </div>
-<div id="招牌-6" class="section level4" number="3.7.1.2">
+<div id="招牌-5" class="section level4" number="3.7.1.2">
 <h4><span class="header-section-number">3.7.1.2</span> 招牌</h4>
 <p>线性提高黑暗场的伤害，属于锦上添花的功能。而在面对高觉醒的狂飙对手，想要无伤真的很难。</p>
 </div>
@@ -793,7 +808,7 @@
 </div>
 <div id="基地防守-6" class="section level3" number="3.7.3">
 <h3><span class="header-section-number">3.7.3</span> 基地防守</h3>
-<p>狂飙的黑暗场反伤能力很坑人，一般在快要一格气的时候都希望用远程攻击在黑暗场范围内打满一格气，所以EMI模块能有效地把对方坑到。</p>
+<p>狂飙的黑暗场反伤能力很坑人，一般在快要一格气的时候都希望用远程攻击在黑暗场有效范围外打满一格气，所以EMI模块让对方远程攻击打不中，让狂飙变得很烦人。</p>
 <!--/Note-->
 </div>
 </div>
@@ -805,7 +820,7 @@
 <div id="特点分析-7" class="section level3" number="3.8.1">
 <h3><span class="header-section-number">3.8.1</span> 特点分析</h3>
 <p>在惊天雷之后，官方预告要放出一个“熟悉的面孔下波动着黑暗能量”的角色，玩家们纷纷猜测是黑擎（Nemesis Prime），毕竟又是个重涂。果然，2019年7月的特殊事件Boss便是他，而且和战擎一样，同属战术系。</p>
-<p>黑擎采用竞技场攒水晶和直接购买二重身水晶（2至4星）或黑暗矩阵水晶（3至5星）的方式获得。</p>
+<p>黑擎刚出来时采用竞技场攒水晶和直接购买二重身水晶（2至4星）或黑暗矩阵水晶（3至5星）的方式获得。后来在泰坦货币商店售价为20万。</p>
 <div id="能力-7" class="section level4" number="3.8.1.1">
 <h4><span class="header-section-number">3.8.1.1</span> 能力</h4>
 <ul>
@@ -817,7 +832,7 @@
 <li>S3：消耗所有黑暗能量。攻击结束后7秒内普攻破防，每层黑暗能量+0.5秒破防时间。</li>
 </ul>
 </div>
-<div id="招牌-7" class="section level4" number="3.8.1.2">
+<div id="招牌-6" class="section level4" number="3.8.1.2">
 <h4><span class="header-section-number">3.8.1.2</span> 招牌</h4>
 <p>用特殊技伤害的x%给自己回血（觉醒75时回血23.7%）。这让黑擎拥有不俗的续航能力，毕竟特殊技的伤害不低，玩家又可以在连击中保证命中。</p>
 </div>
