--- a/chars_book/斗士系.html
+++ b/chars_book/斗士系.html
@@ -417,7 +417,7 @@
 <li>S1是为数不多的只打一下的特殊技，但这一下血越少杀伤越大，风刃30多下的S3也难望其项背；S2除了杀伤力巨大，流血概率也更高；S3基本上就是弱化的S2，平时很少使用。</li>
 </ul>
 </div>
-<div id="招牌-8" class="section level4" number="4.1.1.2">
+<div id="招牌-7" class="section level4" number="4.1.1.2">
 <h4><span class="header-section-number">4.1.1.2</span> 招牌</h4>
 <p>斗擎的招牌被戏称为“真男人”，使之在残血时防御和攻击大幅度增加，由于每回合都能触发，配合同样在残血时威力巨大的S1，只要不死，斗擎经常可以雄风不倒地千里走单骑。在盟战中单体复活药用在他身上十分超值。</p>
 </div>
@@ -466,7 +466,7 @@
 <li>S3乏善可陈，输出太低，无非是暴击燃烧的概率高过普通重击，正常情况没人会使用S3。</li>
 </ul>
 </div>
-<div id="招牌-9" class="section level4" number="4.2.1.2">
+<div id="招牌-8" class="section level4" number="4.2.1.2">
 <h4><span class="header-section-number">4.2.1.2</span> 招牌</h4>
 <p>根据对方的能量提升近战的伤害，属于锦上添花吃招牌的功能。面对高觉醒的碾碎器被他施加降暴后千万小心，防他的特殊技和中招一样疼。</p>
 </div>
@@ -521,7 +521,7 @@
 <li>S3虽然杀伤力极大并且施加6个减益，但由于自身也扣血，所以不推荐使用。</li>
 </ul>
 </div>
-<div id="招牌-10" class="section level4" number="4.3.1.2">
+<div id="招牌-9" class="section level4" number="4.3.1.2">
 <h4><span class="header-section-number">4.3.1.2</span> 招牌</h4>
 <p>汽车大师的招牌技能让其血越少，攻击提升越大，在早期的盟战中，高觉醒的汽车大师只要吃一个单体复活，就能打出极高的伤害，非常划算。</p>
 </div>
@@ -564,7 +564,7 @@
 <h4><span class="header-section-number">4.4.1.1</span> 能力</h4>
 <p>进攻对手或者S2和S3时会获得攻击加成，重击和S1能燃烧，变龙时（重击和特殊攻击）不承受任何伤害并刷新身上的攻击加成。</p>
 </div>
-<div id="招牌-11" class="section level4" number="4.4.1.2">
+<div id="招牌-10" class="section level4" number="4.4.1.2">
 <h4><span class="header-section-number">4.4.1.2</span> 招牌</h4>
 <p>净化所有DOT，并转换为同等数目的攻击加成。突袭中钢锁面对流血模块尤其是流血纳米千（血纳千）很有心得。不过净化触发略慢一拍，还是会承受一定伤害，所以建议吃到DOT时尽快变形阻止伤害。</p>
 </div>
@@ -576,18 +576,26 @@
 <h4><span class="header-section-number">4.4.1.4</span> 短板</h4>
 <ul>
 <li>钢锁基础输出不高，要靠刷新攻击buff的方式来弥补。但这也是他打法矛盾的地方，因为这让钢锁的打法偏向远近结合，无法最大化利用近战伤害，只能寄希望于重击时概率施加燃烧来补充。</li>
-<li>也许是因为变龙可以不受伤害，也许是因为钢锁已然拥有游戏中第一的血量，钢锁在斗士中居然没有护甲能力，</li>
+<li>也许是因为变龙可以不受伤害，也许是因为钢锁已然拥有游戏中第一的血量，钢锁在斗士中居然没有护甲能力。</li>
+<li>此外，单兵强，协同差，也让钢锁的应用场合受到了限制。</li>
 </ul>
-<p>此外，单兵强协同差，也让钢锁的应用场合受到了限制。</p>
 </div>
 <div id="调整-4" class="section level4" number="4.4.1.5">
 <h4><span class="header-section-number">4.4.1.5</span> 8.0调整</h4>
 <p>净化的速度从1.5秒缩短为1秒，提升了钢锁的安全性。</p>
 </div>
+<div id="年8月调整" class="section level4" number="4.4.1.6">
+<h4><span class="header-section-number">4.4.1.6</span> 2020年8月调整</h4>
+<ul>
+<li>重击时除了不受伤害外，加上了霸体光圈，让钢锁可以更蛮横地吐火球，不用担心在放风筝打法中被流弹击中。当月的特殊任务中有一条狂暴集中线，钢锁可以用这个方法与三重霸体的敌人“正面硬刚”</li>
+<li>招牌的伤害比例提高</li>
+<li>S1时100%得到一层加攻</li>
+</ul>
+</div>
 </div>
 <div id="推荐打法-11" class="section level3" number="4.4.2">
 <h3><span class="header-section-number">4.4.2</span> 推荐打法</h3>
-<p>未觉醒的钢锁不要打DOT对手。</p>
+<p>未觉醒的钢锁<del>不要打DOT对手</del>干脆放着别用。</p>
 <div id="短战斗-10" class="section level4" number="4.4.2.1">
 <h4><span class="header-section-number">4.4.2.1</span> 短战斗</h4>
 <p>利用钢锁重击回弹很短的特性，四连一重压起身的打法保持在对方附近。如果用S1作为主要的输出手段则不用刻意刷新buff时间。如果用S2的话最好保证出招时有一定层数的攻击buff来最大化输出。</p>
@@ -619,13 +627,13 @@
 <li>猩猩的重击是一种神奇的存在：不会被声波反弹，会触发碎骨魔被动流血，像近战；但是又会被阿尔茜规避掉，像远程。</li>
 </ul>
 </div>
-<div id="招牌-12" class="section level4" number="4.5.1.2">
+<div id="招牌-11" class="section level4" number="4.5.1.2">
 <h4><span class="header-section-number">4.5.1.2</span> 招牌</h4>
 <p>招牌是根据自己身上护甲的数目，加速dot的过期。并且每过期一个流血减益，就进行一定程度的自我修复。流血类机器人面对高觉醒的猩猩，经常会有越打血越多的痛苦。因为回血只针对流血DOT，对玩家来说，只要组野兽净化对，就不需要特别在意猩猩是否觉醒。</p>
 </div>
-<div id="协同-12" class="section level4" number="4.5.1.3">
+<div id="beast-purification" class="section level4" number="4.5.1.3">
 <h4><span class="header-section-number">4.5.1.3</span> 协同</h4>
-<p>野兽净化：猩猩队长搭配两个野兽角色，就能使所有人的重击净化一切伤害减益，这使得他们在面对各类伤害减益模块的时候，非常有安全感，是突袭的不二选择，盟战中也有很大的优势。</p>
+<p>野兽净化（俗称动物园）：猩猩队长搭配两个野兽角色，就能使所有人的重击净化一切伤害减益，这使得他们在面对各类伤害减益模块的时候，非常有安全感，是突袭的不二选择，盟战中也有很大的优势。</p>
 </div>
 <div id="短板-12" class="section level4" number="4.5.1.4">
 <h4><span class="header-section-number">4.5.1.4</span> 短板</h4>
@@ -664,11 +672,11 @@
 <li>S1很鸡肋，如果没有堆到足够的加攻，全程喷火都不一定出燃烧，这喷火器是马戏团的吗？S2虽然输出大，但是不可防御的属性对玩家意义不大，主要看是否打晕，眩晕概率同样取决于加攻的数目。真正凶狠的还靠S3。</li>
 </ul>
 </div>
-<div id="招牌-13" class="section level4" number="4.6.1.2">
+<div id="招牌-12" class="section level4" number="4.6.1.2">
 <h4><span class="header-section-number">4.6.1.2</span> 招牌</h4>
 <p>每获得三个加攻变得狂暴，提升暴击，并且20%概率破防，出招牌还净化伤害减益并且在招牌期间免疫伤害减益。如果玩家善于获得加攻，是一个不错的提升。</p>
 </div>
-<div id="协同-13" class="section level4" number="4.6.1.3">
+<div id="协同-12" class="section level4" number="4.6.1.3">
 <h4><span class="header-section-number">4.6.1.3</span> 协同</h4>
 <p>帮助野兽角色重击后概率破防，这对他们是相当大的提升。但遗憾的是野牛自己并不获得这个效果，何况还跟猩猩产生属性冗余，只能在5人推图时起到作用，堪称“不用上场的辅助”。另外近战连击破防后连大招很可能被电脑防住，这个bug官方一直没有修复。</p>
 </div>
@@ -703,6 +711,7 @@
 <h3><span class="header-section-number">4.7.1</span> 特点分析</h3>
 <p>在官方宣布“不再发布新机器人”时，坊间盛传Kabam失去了孩之宝的版权。没想到在2019年4月的二周年庆时，Kabam发布了新的挑战任务（地图与之前小黄蜂发布时的相同），并且Boss是惊天雷不说，完成任意难度的挑战都能获得惊天雷（2~4星）。</p>
 <p>虽然惊天雷是斗士让人有点费解，但是这个“红蜘蛛重涂”自一登场就让人觉得有点霸气外露。</p>
+<p>在泰坦货币商店中惊天雷的价格是17万。</p>
 <div id="能力-14" class="section level4" number="4.7.1.1">
 <h4><span class="header-section-number">4.7.1.1</span> 能力</h4>
 <ul>
@@ -714,9 +723,9 @@
 <li>侧闪的时候被近战击中会变得不可阻挡，不过持续时间并不长，可以防止在近战缠斗中走位失误被对手抓住。</li>
 <li>将对方从地面类载具形态打断时，7秒内获得20%的护甲和10%的近战增益。打击正变形为地面类载具的敌人时攻击+100%</li>
 <li>远程攻击获得10%的近战增益，持续0.9秒</li>
-<li>14%血以上时，惊天雷的防御不会被地面类载具重击击倒。官方也没有具体定义什么是“地面类载具”，反正大部分重击他都能防住（天火这种变飞机的防不住，但震天尊这种飞机又可以防住……）。这在游戏中真是少有（之前只有背水一战精通和某盟战模块有此性能）</li>
+<li>14%血以上时，惊天雷的防御不会被地面类载具重击击倒。<del>官方也没有具体定义什么是“地面类载具”，反正大部分重击他都能防住（天火这种变飞机的防不住，但震天尊这种飞机又可以防住……）。</del>这在游戏中真是少有（之前只有背水一战精通和某盟战模块有此性能）</li>
 <li>防御的格挡精通+15%，对地面载具的机器人再+15%</li>
-<li>适时格挡刷新所有近战增益。适时格挡地面载具机器人的近战可以获得10%的近战加成并弹开对手。也就是惊天雷也有搅拌者/天火们的能力。</li>
+<li>适时格挡刷新所有近战增益。适时格挡地面载具机器人的近战可以获得10%的近战加成并弹开对手。也就是惊天雷也有搅拌者/天火们的反弹对手能力。</li>
 </ul>
 <p>三个S技的动作与红蜘蛛完全相同，但效果差别巨大：</p>
 <ul>
@@ -725,7 +734,7 @@
 <li>S3：施加相当于攻击力60~100%的震击6秒。惊天雷身上每层增益+2%震击伤害。敌人身上每层增益+5%震击伤害。</li>
 </ul>
 </div>
-<div id="招牌-14" class="section level4" number="4.7.1.2">
+<div id="招牌-13" class="section level4" number="4.7.1.2">
 <h4><span class="header-section-number">4.7.1.2</span> 招牌</h4>
 <ul>
 <li>在身上没有减益时近战攻击每击中5次获得5~20%的近战加成7秒。</li>
@@ -733,7 +742,7 @@
 <li>战斗开始时，敌人如果有攻击加成（来自精通，模块或能力），惊天雷也会给自己加攻（每一级招牌加0.15%）</li>
 </ul>
 </div>
-<div id="协同-14" class="section level4" number="4.7.1.3">
+<div id="协同-13" class="section level4" number="4.7.1.3">
 <h4><span class="header-section-number">4.7.1.3</span> 协同</h4>
 <p>惊天雷的协同主要是授益他人：</p>
 <ul>
@@ -743,7 +752,7 @@
 </div>
 <div id="短板-14" class="section level4" number="4.7.1.4">
 <h4><span class="header-section-number">4.7.1.4</span> 短板</h4>
-<p>惊天雷整体优势巨大，没有明显短板。不过要注意侧闪的霸体并没有足够的时间马上反击。</p>
+<p>惊天雷整体优势巨大，没有明显短板。不过要注意侧闪出霸体并只能自保，没有足够的时间反击。另外血量在斗士中是比较低的。远程型的重击也让他和碾碎器一样，在近战压制中感觉差了那么点意思。</p>
 </div>
 </div>
 <div id="推荐打法-14" class="section level3" number="4.7.2">
@@ -759,7 +768,7 @@
 </div>
 <div id="基地防守-14" class="section level3" number="4.7.3">
 <h3><span class="header-section-number">4.7.3</span> 基地防守</h3>
-<p>由于电脑AI不太懂得合理利用惊天雷净化和加攻的能力，加上惊天雷在突袭时优势巨大，基地防守不是惊天雷的专长。由于他能挡住大部分重击，所以如果配折射镜模块，可以有效防止远程重击角色用重击放风筝。</p>
+<p>由于电脑AI不太懂得合理利用惊天雷净化和加攻的能力，加上惊天雷在突袭时优势巨大，基地防守不是惊天雷的专长。<del>由于他能挡住大部分重击，所以如果配折射镜模块，可以有效防止远程重击角色用重击放风筝。</del></p>
 <!--/Note-->
 </div>
 </div>
