--- a/chars_book/术语与打法.html
+++ b/chars_book/术语与打法.html
@@ -441,8 +441,8 @@
 <h2><span class="header-section-number">2.4</span> 侧闪反击</h2>
 <ul>
 <li>在上述点枪过程中，预测电脑的前冲，侧闪闪过电脑的前冲后进行反击。</li>
-<li>要领：平时侧闪时机要略早一点，拉出空档“请君入瓮”，等电脑冲到面前时侧闪差不多结束，这样便可马上还击。如果因为距离或者别的远程，在闪过前冲反击可能被电脑后续近战击中，则再做一次后闪（注意好节奏），如果面前汽车大师，黄豹，钢锁这些攻击范围长的，可能还要继续后闪撤退，不要贸然反击。</li>
-<li>注意：有时电脑在超远距离发起点枪前冲，此时如果早早闪掉电脑的点枪，再侧闪时是会被前冲打中的，这样的套路经常坑到玩家，目前也并无很好的解决方法。要么防住第一枪再侧闪，吃一点防御伤害。最稳妥的办法还是把两枪对掉。</li>
+<li>要领：平时侧闪时机要略早一点，拉出空档“请君入瓮”，等电脑冲到面前时侧闪差不多结束，这样便可马上还击。如果因为距离或者别的远程，在闪过前冲反击可能被电脑后续近战击中，则再做一次后闪（注意好节奏），如果面对汽车大师，黄豹，钢锁这些攻击范围长的，可能还要继续后闪撤退，不要贸然反击。</li>
+<li>注意：有时电脑在超远距离发起点枪前冲，例如你一个近战重击电脑后闪，你重击返回时电脑点两枪出来并前冲，此时如果闪掉电脑的点枪，再侧闪时是会被前冲打中的（这种被称为电脑的“拐弯前冲”），这样的套路经常坑到玩家，这时要在侧闪后立即后闪，一般能脱身。</li>
 </ul>
 </div>
 <div id="放风筝" class="section level2" number="2.5">
@@ -454,11 +454,11 @@
 <div id="压起身" class="section level2" number="2.6">
 <h2><span class="header-section-number">2.6</span> 压起身</h2>
 <ul>
-<li>对付气天尊时不能慢悠悠地牵制，要疯狂进攻，这时犀牛这样重击型的角色在重击撞倒后，直接前冲攻击。电脑AI在起身没有大招的情况下往往会侧闪被打中，四连后再撞倒，争取短时间内打多个循环。</li>
-<li>这种打法其实对很多敌人都有效，也适合警车这种牢牢控气的（S1之后马上前冲），当然也有一定的风险，电脑有大招的时候起身放大招，你前冲到面前有时可以闪掉（对震天尊，对汽车大师等），有些角色出手相当快（猩猩）则闪不掉。</li>
-<li>远程重击角色重击击倒后因为距离打开不大，往往可以踏前一步出近战或者直接前冲压起身，这时如果对手起身出S技，一般有时间防御或者闪掉。</li>
+<li>这个技巧之前有部分玩家使用，在对付<a href="爆破系.html#Megatronus-abilities">气天尊</a>的过程中被周知。因为打气天尊时不能慢悠悠地牵制，要疯狂进攻，这时犀牛这样重击型的角色在重击撞倒后，直接前冲攻击。电脑AI在起身没有大招的情况下往往会后闪被打中，四连后再撞倒，争取锁住气在黄球时多打伤害。</li>
+<li>这种打法其实对很多敌人都有效，也适合警车这种牢牢控气的（S1之后马上前冲）。并且在距离合理，操作正确的时候，就算电脑有大招的时候起身放大招，电脑无敌时间过程中你的前冲攻击完成收招，在电脑大招判定出现前你已经可以侧闪或后闪掉（根据对方大招的类型决定），这在传统格斗游戏中叫<a href="https://zhidao.baidu.com/question/437669885.html">“安全跳”</a>。不过有些角色（猩猩、蝎子）S技出手相当快，最好不要贸然压起身。</li>
+<li>远程重击角色重击击倒后因为距离打开不大，往往可以踏前一步出近战或者直接前冲压起身，这时如果对手起身出S技，一般有时间防御或者闪掉。震荡波尤其适合这个套路。</li>
 </ul>
-<p>总之，压起身战术有一定的风险，不宜滥用，比较适合对手被击倒时压在版面下边缘的场合。</p>
+<p>总之，压起身打法有一定的风险，不宜滥用，比较适合对手被击倒时压在版面下边缘的场合。</p>
 </div>
 <div id="绝境搏命" class="section level2" number="2.7">
 <h2><span class="header-section-number">2.7</span> 绝境搏命</h2>
