--- a/chars_book/爆破系.html
+++ b/chars_book/爆破系.html
@@ -420,11 +420,11 @@
 <li>S3的输出恐怖，一发入魂。</li>
 </ul>
 </div>
-<div id="招牌-39" class="section level4" number="8.1.1.2">
+<div id="招牌-38" class="section level4" number="8.1.1.2">
 <h4><span class="header-section-number">8.1.1.2</span> 招牌</h4>
 <p>铁皮的招牌使之每回合有50%的概率大幅度提升特殊中的暴击伤害一次，5觉醒就有220%，100觉醒为600%。玩家钟意铁皮的招牌，是因为配合S2和S3几乎一触发就解决战斗，长战斗也会被大幅度缩短。</p>
 </div>
-<div id="协同-39" class="section level4" number="8.1.1.3">
+<div id="协同-38" class="section level4" number="8.1.1.3">
 <h4><span class="header-section-number">8.1.1.3</span> 协同</h4>
 <ul>
 <li>搭配探长、犀牛或搅拌者时延长DOT时间，盟战中加攻，对铁皮的提升还是很大。</li>
@@ -474,11 +474,11 @@
 <li>S3伤害很高，动作搞笑，并且还附加燃烧，实在要面对纳米千的时候还是有破盾能力的。</li>
 </ul>
 </div>
-<div id="招牌-40" class="section level4" number="8.2.1.2">
+<div id="招牌-39" class="section level4" number="8.2.1.2">
 <h4><span class="header-section-number">8.2.1.2</span> 招牌</h4>
 <p>被打死能复活，清除所有伤害减益，并回血一定比例。由于任何招数都不能一次打死黄蜂，所以黄蜂也成了手残党的福音。通过特殊伤害与放风筝，再有招牌做保，黄蜂可以在残血状态打出高伤害。并且由于盟战超时只扣一半血，对方则保留超时时的血量，很多人利用这个“黄蜂暂停大法”挑战高难度盟战，直到被投诉过多，官方把一局调整为一个小时，才有所缓解。但无论如何，黄蜂在被击倒地复活回完血后暂停强退依然是规则允许范围的占便宜操作。即便不这样，一个单体复活对黄蜂来说也是很实惠的。</p>
 </div>
-<div id="协同-40" class="section level4" number="8.2.1.3">
+<div id="协同-39" class="section level4" number="8.2.1.3">
 <h4><span class="header-section-number">8.2.1.3</span> 协同</h4>
 <ul>
 <li>野兽净化自不待言，值得一提的是在很长时间里黄蜂是野兽队里面唯一的原始兽角色，巨无霸们只有搭配他才能获得加攻，直到蝎子的出现才让黄蜂失去了最后的用武之地。</li>
@@ -524,11 +524,11 @@
 <li>S1无效果。S2杀伤力大，并有60%概率施加6秒燃烧。S3杀伤力更大，70%概率燃烧，一桶酸浇下去100%概率施加酸液。但S3的效果需要在第一发打出燃烧或者之前用手雷施加酸液才能高概率触发暴击，否则那6层暴击伤害是没有效果。所以搅拌者的S2和S3都比较看脸。</li>
 </ul>
 </div>
-<div id="招牌-41" class="section level4" number="8.3.1.2">
+<div id="招牌-40" class="section level4" number="8.3.1.2">
 <h4><span class="header-section-number">8.3.1.2</span> 招牌</h4>
 <p>搅拌者觉醒之后根据剩余血量最大可以减少40%防御伤害，并且获得当时的独门绝技震荡格挡，可以在及时防御的过程中弹开对手造成伤害，并马上获得一个特殊或暴击加成。可惜弹开后第一不能追打，第二自己依然会吃到防御伤害，加上这个游戏不鼓励防御，搅拌者的操作方式的确有些另类。</p>
 </div>
-<div id="协同-41" class="section level4" number="8.3.1.3">
+<div id="协同-40" class="section level4" number="8.3.1.3">
 <h4><span class="header-section-number">8.3.1.3</span> 协同</h4>
 <p>搭配探长、铁皮或犀牛提高伤害减益，盟战中加攻。搭配天火或恐龙勇士可以让震荡格挡的同时减对方能量。</p>
 </div>
@@ -582,11 +582,11 @@
 <li>S3自动生成20个电荷，并且一次性消耗掉所有电荷，打出极高的伤害。</li>
 </ul>
 </div>
-<div id="招牌-42" class="section level4" number="8.4.1.2">
+<div id="招牌-41" class="section level4" number="8.4.1.2">
 <h4><span class="header-section-number">8.4.1.2</span> 招牌</h4>
 <p>血量低于10%时触发回血（5觉醒回15.8%，100觉醒回30.2%），在10%之前被一次打死不会触发，回血时长为三秒，回血过程不像黄蜂是完全无敌，所以还是可能被打死。爆威天然拥有10%护甲，加上血量超长（仅次于斗士和天尊，排名第8），再搭配这种按比例回血的招牌，实际血槽特别长。而高觉醒的爆威在漫长的盟战中也相当于是每场自带一个急救箱，死了只需要小药复活。</p>
 </div>
-<div id="协同-42" class="section level4" number="8.4.1.3">
+<div id="协同-41" class="section level4" number="8.4.1.3">
 <h4><span class="header-section-number">8.4.1.3</span> 协同</h4>
 <p>爆威是典型的协同型选手，三位电影霸天虎给爆威送上了巨大的提升，碾碎器让他开场有概率霸体占得先机，碎骨魔让他充到20层电荷时有80%几率眩晕对手，正好是重炮必暴击的时候，路障则让普攻的电荷数翻倍。</p>
 </div>
@@ -630,11 +630,11 @@
 <li>S3晕对手4秒自晕1秒，虽然搞笑，醒过来的喷气机还是可以安逸地点上5枪再上去打。同时还在30秒内降低对手25%的抗性。</li>
 </ul>
 </div>
-<div id="招牌-43" class="section level4" number="8.5.1.2">
+<div id="招牌-42" class="section level4" number="8.5.1.2">
 <h4><span class="header-section-number">8.5.1.2</span> 招牌</h4>
 <p>每次重击有50%的概率叠加永久的特殊伤害，每层叠加到的伤害提升5%的概率，最多10层。如果不是近战重击命中不高，喷气机堆伤害还是很容易的。另外一个特性是让喷气机自己醒晕的速度逐渐加快。这依然是用来搞笑的功能，因为S3过后喷气机已然有3秒的时间优势了。</p>
 </div>
-<div id="协同-43" class="section level4" number="8.5.1.3">
+<div id="协同-42" class="section level4" number="8.5.1.3">
 <h4><span class="header-section-number">8.5.1.3</span> 协同</h4>
 <ul>
 <li>搭配汽车大师，喷气机完成S技后有概率让自己变得不可阻挡，但因为喷气机的重击已然是不可阻挡，这个协同远没有喷气机回馈给汽车大师的S技概率晕价值大。</li>
@@ -685,11 +685,11 @@
 <li>S3自动生成30个黑暗充能并且100%触发黑暗燃烧。最好先充满30个然后马上放S3，虽然不影响黑暗燃烧的强度，但是总共60层黑暗能量可以进一步提升最后一击的远程伤害。</li>
 </ul>
 </div>
-<div id="招牌-44" class="section level4" number="8.6.1.2">
+<div id="招牌-43" class="section level4" number="8.6.1.2">
 <h4><span class="header-section-number">8.6.1.2</span> 招牌</h4>
 <p>充满30层后概率触发不可阻挡并疯狂加气（5级获得最大能量的10.3%，100级35.3%），对方血越少触发概率越高，对玩家来说让惊破天更快结束战斗，玩家残血去打电脑的惊破天则如同噩梦。并且不可阻挡的惊破天冲向狂飙也不会被晕。</p>
 </div>
-<div id="协同-44" class="section level4" number="8.6.1.3">
+<div id="协同-43" class="section level4" number="8.6.1.3">
 <h4><span class="header-section-number">8.6.1.3</span> 协同</h4>
 <p>搭配震荡波进一步提升重击和S3的伤害；搭配狂飙提升霸天虎们的特殊和暴击伤害；惊破天特别适合领衔全狂派队伍。</p>
 </div>
@@ -727,23 +727,24 @@
 <div id="特点分析-45" class="section level3" number="8.7.1">
 <h3><span class="header-section-number">8.7.1</span> 特点分析</h3>
 <p>出乎大家的意料，Kabam居然把《天元之力》动画里面的震天尊直接拿来发布了，而震天尊也没有辜负“神”的称号，迅速凭借全面的能力站到了游戏第一人的位置。</p>
-<div id="能力-45" class="section level4" number="8.7.1.1">
+<p>当初震天尊发布的时候，机器人币还是当月攒当月用下月失效变黄金，不像后来的通用币可以跨月连续攒。要在一个月“肝”出100万天尊币是相当难的，笔者嫌累，没有狂肝突袭周，于是也与震天尊失之交臂。这之后官方也意识到了震天尊的实力，一直不再玩家机会获取震天尊。最终震天尊和亡灵天尊一同以24万的价格上架到泰坦货币商店，一般玩家探索故事最后一章再打一阵子盟战都可以最终请到真神震天尊。</p>
+<div id="Megatronus-abilities" class="section level4" number="8.7.1.1">
 <h4><span class="header-section-number">8.7.1.1</span> 能力</h4>
-<p>（注意：在震天尊特殊事件中的震天尊Boss拥有更变态的混沌遗迹和战争遗迹，这些没有给到玩家版的震天尊）</p>
 <ul>
-<li>震天尊的加气全自动，与攻击和挨打无关，并且实际速度比标称值每秒1.2要快，因为16秒就能充满一格，而不是27.75秒。这也让玩家迅速发现震天尊配机器人资源模块（“气天尊”）在突袭防御中非常让人头疼。</li>
+<li>震天尊的加气全自动，与攻击和挨打无关，并且实际速度比标称值每秒1.2%要快，因为16秒就能充满一格，而不是27.75秒。这也让玩家迅速发现震天尊配机器人资源模块（“气天尊”）在突袭防御中非常让人头疼。</li>
 <li>狂怒遗迹（黄球）和保存遗迹（蓝球）在每满一格气时切换，让震天尊一会输出高，一会抗性高，保存遗迹像犀牛的减伤盾一样卡死最大输出，防止被秒。</li>
 <li>不朽遗迹（白球）在10%时触发，触发后阻止一切伤害8秒。换句话说保存遗迹加身的震天尊是不可能被任何攻击秒掉的，要在10%血之外秒掉震天尊只能等黄球。</li>
 <li>重击100%出黑暗燃烧，虽然伤害比惊破天的重击小了100%，但胜在触发率高，打各种硬皮对手不吃亏。</li>
 <li>S1概率破甲，如果有黄球则100%偷气给自己。</li>
 <li>S2概率击晕，如果有蓝球则100%偷血给自己。虽然在S2的时候没有攻击加成，但是彼消此长的血量让这一招成为了游戏中最超值的S2。偷血不但无视任何减伤，而且根本不管对方还有没有这么多血可偷！</li>
 </ul>
+<p>（注意：在震天尊特殊事件中的震天尊Boss拥有更变态的混沌遗迹和战争遗迹，这些没有给到玩家版的震天尊）</p>
 </div>
-<div id="招牌-45" class="section level4" number="8.7.1.2">
+<div id="招牌-44" class="section level4" number="8.7.1.2">
 <h4><span class="header-section-number">8.7.1.2</span> 招牌</h4>
 <p>顺从遗迹（红球），充满一格气概率触发，阻止对手触发增益与减益。即使没有红球，觉醒震天尊平时也会将对方的增益减益效果降低。一个明显的例子就是盟战2厅1线能量启动模块，平时开场给1格气，觉醒震天尊上去开场给不到1格。红球能有效地阻止科技系等的减伤手段，让震天尊的输出更加残暴，也能有效降低DOT机器人的输出，可谓攻守兼备。5觉醒概率15%，100觉醒65%。由于是被动触发，所以倒也不能刻意追求。</p>
 </div>
-<div id="协同-45" class="section level4" number="8.7.1.3">
+<div id="协同-44" class="section level4" number="8.7.1.3">
 <h4><span class="header-section-number">8.7.1.3</span> 协同</h4>
 <p>搭配两个威震天之一，让队中所有霸天虎在面对霸天虎时加护甲，面对汽车人时加能量效率。</p>
 </div>
