--- a/chars_book/科技系.html
+++ b/chars_book/科技系.html
@@ -421,11 +421,11 @@
 <li>S3输出比较可观并提升暴击率。不过平时用的较少。</li>
 </ul>
 </div>
-<div id="招牌-31" class="section level4" number="7.1.1.2">
+<div id="招牌-30" class="section level4" number="7.1.1.2">
 <h4><span class="header-section-number">7.1.1.2</span> 招牌</h4>
 <p>紧急修复：敌方单次伤害超过攻击力的120%时概率触发，在4秒内恢复收到的伤害。这个招牌有效的防止了救护车短时间受到高伤害被秒杀，不过初始概率不高，觉醒高了以后还是能让他越来越顽强的。</p>
 </div>
-<div id="协同-31" class="section level4" number="7.1.1.3">
+<div id="协同-30" class="section level4" number="7.1.1.3">
 <h4><span class="header-section-number">7.1.1.3</span> 协同</h4>
 <p>救护车给战擎铁皮战术黄提供回血服务，自己收益的协同乏善可陈，堪称第一团队治疗。很长时间铁皮战擎救护车的小强组合都是低中难度盟战的标准阵容。</p>
 </div>
@@ -470,12 +470,12 @@
 <li>在上述三个模式中被电脑打中就可能会回到能量模式，失去控气/减攻/堆加攻的能力直到再次发动S技，已获得的加攻不会丢失。</li>
 </ul>
 </div>
-<div id="招牌-32" class="section level4" number="7.2.1.2">
+<div id="招牌-31" class="section level4" number="7.2.1.2">
 <h4><span class="header-section-number">7.2.1.2</span> 招牌</h4>
 <p>进一步提升三个S技的效果N秒。S1提射速，S2近战攻击破防，S3加90%攻击。如果只是刚觉醒，时间非常短（5级3.3秒，连S3都只能前两拳获得加成，S2马上前冲追打近战都来不及），觉醒高后才逐步发挥效力。尤其是盟战一厅右路的幻影，觉醒高一个S1出来后长时间小枪追身，非常伤人。
 招牌获益最大的应该是S2，破防性能让幻影可以安逸地打出两连晕和S1收尾。</p>
 </div>
-<div id="协同-32" class="section level4" number="7.2.1.3">
+<div id="协同-31" class="section level4" number="7.2.1.3">
 <h4><span class="header-section-number">7.2.1.3</span> 协同</h4>
 <p>幻影的协同相当多：搭配横炮、战术黄或黄豹时躲闪后的下一击加攻，搭配阿尔茜或探长时提升远程暴击率（幻影自己其实受益不大），搭配热破互相加暴击伤害；搭配声波和录音机再加10%的护盾强度，几乎完全免伤；同时还收到警车给予的重击堆加攻的协同，配合S3之后的攻击加成更加如虎添翼。</p>
 </div>
@@ -529,12 +529,12 @@
 <li>S3除了施加流血，还根据对方剩余血量的多少提升伤害。不过90%以上加55%的伤害，75%以上加25%，这只有在面对强敌时才有意义，平时短战斗如果都到3格气了还没打掉敌人10%的血也太失败了。</li>
 </ul>
 </div>
-<div id="招牌-33" class="section level4" number="7.3.1.2">
+<div id="招牌-32" class="section level4" number="7.3.1.2">
 <h4><span class="header-section-number">7.3.1.2</span> 招牌</h4>
 <p>犀牛招牌的文字写得佶屈聱牙，简单说就是在有盾的时候，敌人单次攻击（只限近战类）伤害只要超过他们基础攻击的60%就会爆盾，造成震击反伤。暴击高的侦查和战士就很容易被犀牛反坑，汽车大师残血打犀牛也会被迅速震死。高觉醒的犀牛在盟战图2中曾经是十分头疼的存在，想无伤过非常难，必须找准机会屈防拆盾。后来官方让侦查系吃爆盾的概率减少了50%。</p>
 <p>犀牛的招牌因挨打而触发，对玩家来说很难主动利用，所以犀牛不特别依赖觉醒。不过觉醒犀牛配上奇怪的折射镜守基地有一定的效果，因为近战屈防拆盾不但会吃到模块的反伤，还有概率晕掉。盟战的犀牛Boss配了反射远程，几乎不可能屈防。打犀牛最好使用近战低暴击的角色或者普攻伤害低特殊伤害高的角色，例如……爆破系？</p>
 </div>
-<div id="协同-33" class="section level4" number="7.3.1.3">
+<div id="协同-32" class="section level4" number="7.3.1.3">
 <h4><span class="header-section-number">7.3.1.3</span> 协同</h4>
 <p>犀牛除了野兽净化，还和搅拌者有个协同，延长DOT的时间。</p>
 </div>
@@ -567,23 +567,23 @@
 <!--Note-->
 <div id="特点分析-34" class="section level3" number="7.4.1">
 <h3><span class="header-section-number">7.4.1</span> 特点分析</h3>
-<p>声波以其独特的重击、独特的加气方式和独特招牌在游戏中期占据着科技系的重要地位。但后期由于重击命中的调整和盟战三厅漏气的模块失去了热度，再加上救护车和战擎的搭配和千斤顶的出现，另外一个“波”的加强，声波的使用场合已大不如前。</p>
+<p>声波以其霸道的重击、独特的加气方式和独特招牌在游戏早期占据着科技系的重要地位。但后期由于重击命中的调整和盟战三厅漏气的模块失去了热度，再加上救护车和战擎的搭配、千斤顶的出现和震荡波的加强，声波的使用场合已大不如前。</p>
 <div id="能力-34" class="section level4" number="7.4.1.1">
 <h4><span class="header-section-number">7.4.1.1</span> 能力</h4>
 <ul>
-<li>游戏早期的技能描述中语焉不详，使得很多玩家不明白这个概率。后来官方在技能中明确提到了：声波通过重击和S2的命中给自己充能量，重击后可充到两格，S2后可充满。</li>
+<li>游戏早期的技能描述中语焉不详，使得很多玩家不明白声波能量获取的机制。后来官方在技能中明确提到了：声波通过重击和S2的命中给自己充能量，重击后可充到两格，S2后可充满。</li>
 <li>声波的重击和S2/S3可以稳定地施加震击，这使他的输出有了额外保障，在面对恐电模块时也是最佳选择。</li>
 <li>声波的重击是三连发，身后有空间的时候最好后闪躲开，因为侧闪的时机十分苛刻，早期声波的重击命中几乎是95%，后来暗改之后电脑很喜欢侧闪反击。早期声波用重击打死对手的时候对手还会站起来晕一下再倒地，后来被开发商取消了。</li>
-<li>S1有50%的概率晕1.5秒，75%的概率能量流失，在平时声波可以用这个手段来控场与控气。</li>
+<li>S1有<del>50%</del>60%的概率晕1.5秒，<del>75%</del>85%的概率能量流失，在平时声波可以用这个手段来控场与控气。</li>
 <li>S3的伤害不高，有40%的概率晕2.5秒，70%的概率出能量锁定8秒。</li>
 </ul>
 </div>
-<div id="招牌-34" class="section level4" number="7.4.1.2">
+<div id="招牌-33" class="section level4" number="7.4.1.2">
 <h4><span class="header-section-number">7.4.1.2</span> 招牌</h4>
 <p>声波护盾：在充满一格气时激活护盾，对能量攻击减伤35%并概率反射远程攻击，造成原始伤害的140%。5级概率20.5%，100级90%。触发反弹与声波是否正在防御无关，铁皮即使S2打中第一发，后面只要声波触发了反弹，会立即解除受创硬直，经常让人大难不死。</p>
 <p>由于这个招牌是被动触发，所以价值见仁见智，对电脑声波来说，由于电脑“知道”下一次是否会触发，所以电脑声波连面对远程重击也敢格挡。对玩家来说，除了保命，是不可能消极地用防御反弹来应付对方的远程攻击的。</p>
 </div>
-<div id="协同-34" class="section level4" number="7.4.1.3">
+<div id="协同-33" class="section level4" number="7.4.1.3">
 <h4><span class="header-section-number">7.4.1.3</span> 协同</h4>
 <p>搭配幻影和犀牛时护盾额外减伤。搭配震荡波时，声波对爆破机器人攻击力提升。与威震天同时出战时，队中霸天虎对汽车人攻击力提升。</p>
 </div>
@@ -591,12 +591,21 @@
 <h4><span class="header-section-number">7.4.1.4</span> 短板</h4>
 <p>声波其实并无明显短板，但他独特的加气方式在遇到持续漏气的模块时会让他很难充到S2。</p>
 </div>
+<div id="年8月调整-2" class="section level4" number="7.4.1.5">
+<h4><span class="header-section-number">7.4.1.5</span> 2020年8月调整</h4>
+<p>玩家群体中一直有呼声要加强声波，虽然看不出往哪里加强比较合适（尤其是加强后电脑的声波会不会更加变态？），官方在2020年8月做出以下调整：</p>
+<ul>
+<li>S1的漏气和晕点的概率提高</li>
+<li>S3的晕点概率和震击伤害提高</li>
+</ul>
+<p>从而这两个技能也有一定的用武之地，尤其是控气能力确实是声波比较欠缺的，且这种加强不会让电脑的声波受益太大。</p>
+</div>
 </div>
 <div id="推荐打法-34" class="section level3" number="7.4.2">
 <h3><span class="header-section-number">7.4.2</span> 推荐打法</h3>
 <div id="短战斗-30" class="section level4" number="7.4.2.1">
 <h4><span class="header-section-number">7.4.2.1</span> 短战斗</h4>
-<p>由于普攻不加气，牵制和侧闪反击这种方式在短战斗意义不大，主要围绕重击打，声波的重击命中虽然被削弱了但依然不低。由于重击后回弹很小，击倒后有时间上的优势可以前冲压起身，在短战斗中经常是将对手压在墙角择，对方起身时也很容易被骗招。S1的晕点可以加以利用，运气好又晕又漏气，声波打几个来回对方差不多了。</p>
+<p>由于普攻不加气，牵制和侧闪反击这种方式在短战斗意义不大，主要围绕重击打，声波的重击命中虽然被削弱了，但依然不低。由于重击后回弹很小，击倒后有时间上的优势可以前冲压起身，在短战斗中经常是将对手压在墙角择，对方起身时也很容易被骗招。S1的晕点可以加以利用，运气好又晕又漏气，声波打几个来回对方差不多了。</p>
 </div>
 <div id="长战斗-31" class="section level4" number="7.4.2.2">
 <h4><span class="header-section-number">7.4.2.2</span> 长战斗</h4>
@@ -627,24 +636,29 @@
 <li>S3就是S1和S2的合并版，在游戏的S3中也算上乘之作。</li>
 </ul>
 </div>
-<div id="招牌-35" class="section level4" number="7.5.1.2">
+<div id="招牌-34" class="section level4" number="7.5.1.2">
 <h4><span class="header-section-number">7.5.1.2</span> 招牌</h4>
-<p>回溯：在充满一格气时概率触发，对触发后4秒的伤害瞬间补回。概率很低（5级16.8%，100级35%），对玩家来说触发后只要不被秒杀，可以放肆一搏。因为回血太快，高觉醒震荡波配科技控制台经常会瞬间回满，让人怀疑人生，所以看见电脑触发后就老老实实等4秒吧。</p>
+<p>回溯：在充满一格气时概率触发，对触发后4秒的伤害瞬间补回。概率很低（5级16.8%，100级35%），对玩家来说触发后只要不被秒杀，可以放肆一搏。</p>
+<p>总的来说，这个招牌对玩家的震荡波是无足轻重的，毕竟当你主动打满一格气的时候一般是准备连S技，S技放完等对手起身，4秒钟也不剩多少了。而被电脑揍的时候，你想要触发招牌他又不一定触发……</p>
 </div>
-<div id="协同-35" class="section level4" number="7.5.1.3">
+<div id="协同-34" class="section level4" number="7.5.1.3">
 <h4><span class="header-section-number">7.5.1.3</span> 协同</h4>
 <p>百炼为战由于是1v1的战斗，地图上的敌人也是各式各样，所以在组队时讲究花搭，不像其他卡牌游戏一样有同属性阵容的加成。震荡波的出现改变了这一点，也让科技系成为唯一值得同属性出战的类别。</p>
 <ul>
-<li>脑力汲取</li>
+<li>脑力汲取
+<ul>
 <li>声波：让震荡波的震击时间延长</li>
 <li>救护车：让震荡波的充能有效时间延长</li>
 <li>幻影：让震荡波漏气更快</li>
 <li>犀牛：让震荡波震击伤害加强</li>
-<li>录音机：震荡波开局获得若干个充能（1~3个根据录音机的星等），每25秒还会得到一次。这让震荡波理论上可以打出12层震击。</li>
+<li>录音机：震荡波开局获得若干个充能（1<sub>3个根据录音机的星等），每25秒还会得到一次。这个协同催生了一种叫“大波暴力队”的队伍，也就是震荡波带2</sub>3个录音机出战，这时由于系统的bug，开局震荡波会获得12个充能，只要搏到一发重击，短战斗对方马上就崩盘了，长战斗也是梦幻开局。</li>
 <li>千斤顶：震荡波在施加3层或更多震击时有概率打晕2秒</li>
-<li>天火：震荡波每获得6个或更多充能时修复少量生命。</li>
-<li>脑力增强</li>
+<li>天火：震荡波每获得6个或更多充能时修复少量生命。此时上面的大波暴力队可以升级为暴力续航队，因为只要带2个录音机和1个天火，就可以每25秒稳定得到回血。这种5人队在推图的时候非常安逸。</li>
+</ul></li>
+<li>脑力增强
+<ul>
 <li>震荡波只有在队伍全是科技系获得对爆破系的加攻。</li>
+</ul></li>
 <li>与惊破天互相提高重击和S3的杀伤力。</li>
 </ul>
 </div>
@@ -655,20 +669,20 @@
 </div>
 <div id="推荐打法-35" class="section level3" number="7.5.2">
 <h3><span class="header-section-number">7.5.2</span> 推荐打法</h3>
-<p>使用震荡波要吸到充能，并不能完全原地站防不开枪，因为电脑会很聪明地也不开枪，所以要多用一枪骗两枪的方式来勾引对方。</p>
+<p>使用震荡波要吸到充能，并不能完全原地站防不开枪，因为电脑会很聪明地也不开枪，所以要多用一枪骗两枪的方式来勾引对方。但为了吸枪改变走位其实是容易怠误战机的，建议不要刻意吸，而是面对那些天生爱点枪的（天火、惊破天、幻影、阿尔茜）才多吸几发。</p>
 <div id="短战斗-31" class="section level4" number="7.5.2.1">
 <h4><span class="header-section-number">7.5.2.1</span> 短战斗</h4>
-<p>战斗不长的时候采用压迫式打法，攒到S1就放，可以有效地保障输出和控气从而快速解决战斗。</p>
+<p>战斗不长的时候采用压迫式打法，攒到S1就放，可以有效地保障输出和控气，大胆压起身，从而快速解决战斗。</p>
 </div>
 <div id="长战斗-32" class="section level4" number="7.5.2.2">
 <h4><span class="header-section-number">7.5.2.2</span> 长战斗</h4>
 <p>安全起见，通过远程牵制中攒到充能配合S1。如果没有合适的机会打近战，快过期的充能应该用重击的方式转换成震击，然后在侧闪反击中连S1。</p>
-<p>S2虽然输出高，但除非是防止修复的场合，平时是抵不过两个S1带来的回报的。</p>
+<p>由于S1过于优秀，他的S2和S3基本上不需要用，一般只用来封回血，例如对付“最后防线修复”这种疯狂回血的模块，在对方血快到修复线之前攒到一个S3，一看到修复出来就马上放。</p>
 </div>
 </div>
 <div id="基地防守-35" class="section level3" number="7.5.3">
 <h3><span class="header-section-number">7.5.3</span> 基地防守</h3>
-<p>科技控制台能进一步发挥震荡波震击的实力，超导2000也能让他的S2更具威慑力。</p>
+<p>科技控制台能进一步发挥震荡波震击的实力，同时出招牌时会大量回血，让人怀疑人生，所以看见电脑触发后就老老实实等4秒吧。另外超导2000也能让他的S2更具威慑力。</p>
 <!--/Note-->
 </div>
 </div>
@@ -692,19 +706,19 @@
 <li>S3施加长时间减攻，默认减10%，放大充能越多，额外减得越多。</li>
 </ul>
 </div>
-<div id="招牌-36" class="section level4" number="7.6.1.2">
+<div id="招牌-35" class="section level4" number="7.6.1.2">
 <h4><span class="header-section-number">7.6.1.2</span> 招牌</h4>
 <p>这是一个性能较多的招牌，但是因为中文翻译的问题，很多人不太理解说的是什么：首先，招牌让有盾的录音机面对远程基础能量攻击可以没有受创硬直，尤其是10层充能时就变成了1.2秒的盾，这让录音机额外有了类似野牛那种“充霸体”的能力（注意，对漂移/雷震/反冲的物理攻击无效）。</p>
 <p>其次，减20%的能量伤害，并且有40%的概率把打在身上的能量伤害用来回血。如果是特殊攻击则双倍回血。</p>
 <p>不过，解释了这么多，这个招牌依然显得略鸡肋。首先那“霸体”能力没有光圈的指示，不能硬扛近战，用起来肯定不放心。其次回血概率恒定为40%，我何必为了这点概率消极防守，再者说跟录音机对枪的对手能有几枪打中录音机？</p>
 </div>
-<div id="协同-36" class="section level4" number="7.6.1.3">
+<div id="协同-35" class="section level4" number="7.6.1.3">
 <h4><span class="header-section-number">7.6.1.3</span> 协同</h4>
 <p>搭配声波、幻影或者犀牛时提高护盾减伤能力。另外录音机为震荡波提供的充能对后者提升非常大。</p>
 </div>
 <div id="短板-36" class="section level4" number="7.6.1.4">
 <h4><span class="header-section-number">7.6.1.4</span> 短板</h4>
-<p>很多人都不怎么看好录音机，虽然看技能没有太弱的地方。但实战中有一个核心问题：虽然可以很快在远程牵制中占到便宜，但被干扰的对手行动的节拍也会改变，并且干扰程度不同，节拍就不同，对于玩家的走位和部署反而也是一种“干扰”。但官方并没有计划在8.0中调整录音机。</p>
+<p>很多人都不怎么看好录音机。虽然看技能没有太弱的地方，但实战中有一个核心问题：虽然可以很快在远程牵制中占到便宜，但被干扰的对手行动的节拍也会改变，并且干扰程度不同，节拍就不同，对于玩家的走位和部署反而也是一种“干扰”。但官方并没有计划在8.0中调整录音机。</p>
 </div>
 </div>
 <div id="推荐打法-36" class="section level3" number="7.6.2">
@@ -745,11 +759,11 @@
 <li>S3：跟S2一样的效果，只不过会把三个升级都变成与第一个相同，也就是必然回血。并且就算已经有三个相同的升级，也会再次回血。</li>
 </ul>
 </div>
-<div id="招牌-37" class="section level4" number="7.7.1.2">
+<div id="招牌-36" class="section level4" number="7.7.1.2">
 <h4><span class="header-section-number">7.7.1.2</span> 招牌</h4>
 <p>千斤顶没有觉醒基本上就是废的，但是一旦觉醒，当每次受到攻击会令体力降到75%，50%和25%的时候会触发免伤护盾卡住伤害在上述三个数值一段时间，觉醒等级决定护盾时间长短。光是招牌其实只能给千斤顶保命三次，但一旦配备了纳米修复精通，由于护盾卡住伤害，纳米又随机把体力恢复到护盾之上一点点，这就让千斤顶在纳米修复的有效时间内可反复触发护盾。最初这个招牌确实无比bug，后来官方决定保留纳米精通的特性，但是让一层或更多的dot可以破盾，这就让千斤顶的护盾有了解药，而玩家由于可以通过回血来自救，基本上让千斤顶在纳米修复有效期（最长一分钟）内雄风不倒。尤其是在突袭中千斤顶配备流血模块的时候，“血纳千”能让没有DOT的角色郁郁而终，配备科技控制台的“科技千”更是反复刷新科技护盾，除DOT外全场屹立不倒。</p>
 </div>
-<div id="协同-37" class="section level4" number="7.7.1.3">
+<div id="协同-36" class="section level4" number="7.7.1.3">
 <h4><span class="header-section-number">7.7.1.3</span> 协同</h4>
 <p>千斤顶没有特别的受益，只是在搭配小黄蜂或者爵士时，队中所有汽车人开局随机获得一个升级。另外给震荡波提供的击晕协同也很有用。</p>
 </div>
@@ -801,11 +815,11 @@
 <li>S3将全部充能变成震击。S3结束后再得到3个充能。</li>
 </ul>
 </div>
-<div id="招牌-38" class="section level4" number="7.8.1.2">
+<div id="招牌-37" class="section level4" number="7.8.1.2">
 <h4><span class="header-section-number">7.8.1.2</span> 招牌</h4>
 <p>75%血以下时站防1秒能消耗一个充能给自己回血，并净化一个燃烧减益。5级回血2%，100级回血6%</p>
 </div>
-<div id="协同-38" class="section level4" number="7.8.1.3">
+<div id="协同-37" class="section level4" number="7.8.1.3">
 <h4><span class="header-section-number">7.8.1.3</span> 协同</h4>
 <ul>
 <li>老朋友：搭配红蜘蛛时，天火的近战招架 <del>有概率</del> 架晕对手的时间延长50%。<del>注意：连特殊技的近战攻击也可能架晕！</del></li>
